test/error/sema/enum-unknown-variant.dsk
enum S
    A
    B
end

echo(S.C)
